--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "./node_modules/nodemon/bin/nodemon.js server.js"
+    "start": "node server.js",
+    "dev-start": "nodemon server.js"
   },
   "repository": {
     "type": "git",
@@ -18,9 +19,6 @@
   },
   "homepage": "https://github.com/mohammadfarooqi/entelo-assignment#readme",
   "dependencies": {
-    "hapi": "^17.1.1"
-  },
-  "devDependencies": {
-    "nodemon": "^1.13.3"
+    "hapi": "^16.6.2"
   }
 }
