--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "good": "^7.3.0",
     "good-console": "^6.4.1",
     "good-squeeze": "^5.0.2",
-    "hapi": "^16.6.2"
+    "hapi": "^16.6.2",
+    "wreck": "^14.0.2"
   }
 }
