--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   },
   "homepage": "https://github.com/mohammadfarooqi/entelo-assignment#readme",
   "dependencies": {
+    "dotenv": "^4.0.0",
     "good": "^7.3.0",
     "good-console": "^6.4.1",
     "good-squeeze": "^5.0.2",
