--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "good-console": "^6.4.1",
     "good-squeeze": "^5.0.2",
     "hapi": "^16.6.2",
+    "joi": "^13.0.2",
     "wreck": "^14.0.2"
   }
 }
